[gd_scene load_steps=6 format=3 uid="uid://c51vx8iq5wpff"]

[ext_resource type="Script" path="res://scenes/pause_manager.gd" id="1_p25tm"]
[ext_resource type="LabelSettings" uid="uid://c5s06bpxvxfy0" path="res://24pxLabelSettings.tres" id="2_f75cx"]
[ext_resource type="AudioStream" uid="uid://b5td44yj4blkb" path="res://sounds/click.wav" id="3_2ujhi"]
[ext_resource type="AudioStream" uid="uid://btfxxodd8rhk7" path="res://sounds/switch.wav" id="4_jllmh"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_72q1v"]
bg_color = Color(0.24, 0.24, 0.24, 1)

[node name="PauseManager" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_p25tm")

[node name="Center" type="Control" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -118.0
offset_top = -107.0
offset_right = 118.0
offset_bottom = 107.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="Center"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_72q1v")

[node name="MarginContainer" type="MarginContainer" parent="Center/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="Center/Panel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="Label" type="Label" parent="Center/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Paused..."
label_settings = ExtResource("2_f75cx")
horizontal_alignment = 1

[node name="Spacer" type="Control" parent="Center/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="UnpauseButton" type="Button" parent="Center/Panel/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(150, 40)
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/outline_size = 7
theme_override_font_sizes/font_size = 20
text = "Continue"

[node name="Spacer2" type="Control" parent="Center/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="QuitButton" type="Button" parent="Center/Panel/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(150, 40)
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/outline_size = 7
theme_override_font_sizes/font_size = 20
text = "Quit"

[node name="ClickSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_2ujhi")
volume_db = -5.0

[node name="SwitchSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_jllmh")
volume_db = -15.0

[connection signal="focus_entered" from="Center/Panel/MarginContainer/VBoxContainer/UnpauseButton" to="." method="play_switch_sound"]
[connection signal="mouse_entered" from="Center/Panel/MarginContainer/VBoxContainer/UnpauseButton" to="." method="_on_unpause_button_mouse_entered"]
[connection signal="pressed" from="Center/Panel/MarginContainer/VBoxContainer/UnpauseButton" to="." method="play_click_sound"]
[connection signal="pressed" from="Center/Panel/MarginContainer/VBoxContainer/UnpauseButton" to="." method="_on_unpause_button_pressed"]
[connection signal="focus_entered" from="Center/Panel/MarginContainer/VBoxContainer/QuitButton" to="." method="play_switch_sound"]
[connection signal="mouse_entered" from="Center/Panel/MarginContainer/VBoxContainer/QuitButton" to="." method="_on_quit_button_mouse_entered"]
[connection signal="pressed" from="Center/Panel/MarginContainer/VBoxContainer/QuitButton" to="." method="play_click_sound"]
[connection signal="pressed" from="Center/Panel/MarginContainer/VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
